CHANGES


2018-12-25 (nb)

Added a "README-fx.txt" file for the MAX7219LED8x8fx library.

Removed unused code and data in the main library.

Updated the max7219led8x8_fx1 module with better and new examples using the new MAX7219LED8x8fx library.

Added a new "MAX7219LED8x8fx" library with more complex functions such as text, fonts and bitmaps.


2018-01-01 (nb)

Updated TODO file.


2018-01-01 (nb)

Improved testing scripts. Updated and fixed comments. Updated copyright info.

- Improved testing scripts.
- Updated and fixed comments.
- Updated copyright info.


2018-01-01 (nb)

Updated copyright info.


2017-12-31 (nb)

Bug fix - loop through the matrices.

- Bug fix - loop through the matrices.
- Added more comments in the source code.
- Demo Trick: Flip the data bit for even/odd matrix.


2017-11-19 (nb)

Moved the "Conway's Game of Life" (module max7219led8x8_life) to the "Life Game" project repository.


2017-11-19 (nb)

Updated text in files.


2017-11-17 (nb)

Added new MAX7219LED8x8fx library.


2017-11-17 (nb)

Updated copyright info and texts.


2017-11-17 (nb)

Fixed max7219led8x8_text/Makefile - added tinyavrlib/scheduler.c library.


2017-11-13 (nb)

Implemented and used max7219b_scheduler instead of scheduler_init with userfunc.

- Using max7219b_scheduler instead of scheduler_init with userfunc.
- Implemented max7219b_scheduler function.


2017-07-30 (nb)

Updated some texts.


2017-03-25 (nb)

Source code maintenance. Cleanup.


2017-03-14 (nb)

Source code maintenance.

2017-03-14 (nb)

IMPORTANT: The ports for the DIN/CS/CLK signals ARE CHANGED to match the wiring of the upcoming new Tinusaur shield.


2017-01-08 (nb)

Fixes bug - not working with more than 2 segments. Improved initialization, updated samples.

- Function max7219_init improved: initializes all segment separately, now requires number of segments to initialize. Uses init sequence data array. Fixes bug - not working with more than 2 segments.